adjustment: formatting manifest file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,19 @@
     package="com.andresuryana.metembangbali">
     <!-- Permissions for networking -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- Permission for using camera feature -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!-- Permission for using camera feature -->
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
         android:name="android.hardware.camera"
-        android:required="true" /> <!-- Wake lock permission -->
-    <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- Record permission -->
+        android:required="true" />
+
+    <!-- Wake lock permission -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <!-- Record permission -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
